# girtest

./: CMakeLists.txt  README.md  main.cpp  test.py  testclass.cpp  testclass.h
cmake/: GIR.cmake
zypp/: zypp.cpp  zypp.h  zypptestclass.cpp  zypptestclass.h
